# parallel-sys2

./: .gitignore  CMakeLists.txt  LICENSE
scripts/: exec.sh  process1.py  process2.py  temp.txt
src/: exercises.hxx  game_of_life.cxx  game_of_life_async.cxx  game_of_life_common.hxx  game_of_life_mix.cxx  main.cxx  pi_monte_carlo.cxx  types.hxx
